--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VendoHub Blog — E-Loading, Carwash, Helmet & Snack Vendo</title>
+  <title>Vendopro Blog — E-Loading, Carwash, Helmet & Snack Vendo</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
   <nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">
-        <span class="text-primary">VendoHub</span> Blog
+        <span class="text-primary">Vendopro</span> Blog
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
@@ -102,7 +102,7 @@
               </p>
               <div class="d-flex align-items-center justify-content-between">
                 <div class="small text-secondary">
-                  <span class="fw-semibold text-dark">By VendoHub Team</span> • 6 min read
+                  <span class="fw-semibold text-dark">By Vendopro Team</span> • 6 min read
                 </div>
                 <a href="#" class="btn btn-sm btn-primary">Read</a>
               </div>
@@ -382,7 +382,7 @@
   <footer class="py-4 border-top bg-light">
     <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
       <div class="text-secondary small">
-        © <span id="year"></span> VendoHub. All rights reserved.
+        © <span id="year"></span> Vendopro. All rights reserved.
       </div>
       <div class="d-flex gap-3 small">
         <a class="text-decoration-none" href="#">Privacy</a>
